Finish fixing css spacing for screen sizes

--- a/css/main.css
+++ b/css/main.css
@@ -61,23 +61,71 @@ h3 {
 }
 
 p {
+  font-size: 1rem;
   margin: 0 0 1rem;
   text-align: left;
-  color: rgba(255, 255, 255, .7);
+  color: #fff;
   padding-bottom: 1rem;
 }
 
 a {
   text-decoration: none;
-  color: rgba(255, 255, 255, .7);
+  color: #fff;
   font-size: 1.125rem;
-  padding: 6vmin;
+  padding: 1rem;
   margin-bottom: 1rem;
-  border: .2rem solid rgba(255, 255, 255, .7);
+  border: .2rem solid #fff;
 }
 
 a:hover {
-  background-color: #fff;
-  color: #000;
-  border: .2rem solid #fff;
+  background-color: rgba(255, 255, 255, .7);
+  color: #fff;
+}
+
+@media only screen and (min-width: 38em) {
+
+  section {
+    margin: 2rem;
+  }
+
+  ul {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-gap: 6vmin;
+    place-items: end;
+  }
+
+  li {
+    justify-content: space-between;
+    align-self: stretch;
+  }
+
+  h2 {
+    text-align: center;
+    padding-top: 0;
+    padding-bottom: 1rem;
+  }
+
+  h3 {
+    text-align: left;
+  }
+
+  a {
+    text-align: left;
+    margin-bottom: 0;
+  }
+
+}
+
+@media only screen and (min-width: 90em) {
+
+  section {
+    margin: 0 2rem 1rem;
+    padding: 6vmin;
+  }
+
+  h2 {
+    margin-bottom: 2rem;
+  }
+
 }
